@@ -214,6 +214,10 @@ B<NOTE:> You should probably B<never> call this method directly, as it is a wast
     "server" : { ... },
     "empire" : {
         "id" : "xxxx",
+        "colonies" : {
+            "id-goes-here" : "Earth",
+            "id-goes-here" : "Mars"
+        },
         "rpc_count" : 321, # the number of calls made to the server
         "is_isolationist" : 1, # hasn't sent out probes or colony ships
         "name" : "The Syndicate",
@@ -224,11 +228,15 @@ B<NOTE:> You should probably B<never> call this method directly, as it is a wast
         "essentia" : 0,
         "planets" : {
             "id-goes-here" : "Earth",
-            "id-goes-here" : "Mars
+            "id-goes-here" : "Mars",
+            "id-goes-here" : "Death Star"
         },
         "tech_level"           : 20,  # Highests level university has gotten to.
         "self_destruct_active" : 0,
         "self_destruct_date" : "",
+        "stations" : {
+            "id-goes-here" : "Death Star"
+        },
         "primary_embassy_id" : 234567
     }
  }
